crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_060_Multicart60_4_in_1_Mapper_60_p1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-060-Multicart60/4-in-1 (Mapper 60) [p1].nes
rom_sha256=5125607a6df01506ba12704876d5edf3b67be6d8f0a9361591a637ff5afd48e9
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=8e82db35d5b98a4a
checkpoint f900 fb_fnv1a64=b8aad8c45b29e4a8
checkpoint f1100 fb_fnv1a64=b8aad8c45b29e4a8
