crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_060_Multicart60_Chiu_Keung_Juen_Sek_Wong_Gam_Ka_4_in_1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-060-Multicart60/Chiu Keung Juen Sek Wong Gam Ka 4-in-1 _p1____.nes
rom_sha256=e503b587bdc03166d5d3f42ca2796d762f4450a6ce3d11dbb457ebf16796b45c
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=7d92dfbe57e4a2fa
checkpoint f900 fb_fnv1a64=6d3f23b7b6cb7085
checkpoint f1100 fb_fnv1a64=6d3f23b7b6cb7085
