crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_060_Multicart60_TN_95_in_1_6_in_1_p1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-060-Multicart60/TN 95-in-1 (6-in-1) [p1].nes
rom_sha256=ae704288f69ad22cd174b22cd31655d41a48235003d6dcf8d4fd478b43eeca74
frames=1141
fb_bytes=245760
cycles=16164061
audio_samples=398265
audio_fnv1a64=f0f1405fb95b9848
checkpoint f900 fb_fnv1a64=1719dca5cef7a325
checkpoint f1100 fb_fnv1a64=1719dca5cef7a325
