crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_061_Multicart61_Tetris_Family_9_in_1_Hwang_Shinwei_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-061-Multicart61/Tetris Family 9-in-1 (Hwang Shinwei) (Unl) [!].nes
rom_sha256=66a7c3979f94fa0df2466c508265caaba62c5f3ac4b9412ac1e1140b91faa0a6
frames=1141
fb_bytes=245760
cycles=33949777
audio_samples=836505
audio_fnv1a64=729dbb05ab29ad1c
checkpoint f900 fb_fnv1a64=5b5dd8c5ebb12ea8
checkpoint f1100 fb_fnv1a64=5b5dd8c5ebb12ea8
