crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_062_Multicart62_Super_190_in_1_Asia_En_Unl_Pirate_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-062-Multicart62/Super 190-in-1 (Asia) (En) (Unl) (Pirate).zip
rom_sha256=9c62bd223be1a6ca7dc23a3368abe60970bd2719ed71af9537a7a16bc385a66c
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=3f7bde134145ef44
checkpoint f900 fb_fnv1a64=449e1ea27205a2d3
checkpoint f1100 fb_fnv1a64=23556ab22bec65ad
